<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/options_cat_prefs"
        android:key="cat1">

                <Preference
                    android:title="@string/options_currency"
                    android:summary="@string/options_currency2"
                    android:key="fiat"
                 />
                <Preference
                    android:title="@string/options_blockexplorer"
                    android:summary="@string/options_blockexplorer2"
                    android:key="explorer"
                />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options_cat_wallet"
        android:key="cat4">
                <Preference
                    android:title="@string/options_export"
                    android:summary="@string/options_export2"
                    android:key="export"
                    />
                <Preference
                    android:title="@string/options_restore"
                    android:summary="@string/options_restore2"
                    android:key="restore"
                    />
        <CheckBoxPreference
                    android:title="@string/options_pin"
                    android:summary="@string/options_pin2"
                    android:defaultValue="false"
                    android:key="pin"
                    />
        <CheckBoxPreference
            android:title="@string/options_scramble_pin"
            android:summary="@string/options_scramble_pin2"
            android:defaultValue="false"
            android:key="scramblePin"
            />
        <CheckBoxPreference
            android:title="@string/options_haptic"
            android:summary="@string/options_haptic_2"
            android:defaultValue="false"
            android:key="haptic"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options_cat_offline"
        android:key="cat6">

        <Preference
            android:title="@string/options_broadcast_hex"
            android:summary="@string/options_broadcast_hex2"
            android:key="broadcastHex"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options_cat_other"
        android:key="cat5">
		        <Preference
        	        android:title="@string/about_title"
            	    android:summary="@string/about_us"
                	android:key="about"
                	/>

    </PreferenceCategory>

</PreferenceScreen>
