<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/start"
            android:textAlignment="gravity"
            android:id="@+id/start"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/startimg"
            android:layout_toEndOf="@+id/startimg" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/get_started"
            android:gravity="center_horizontal"
            android:layout_above="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_first_address"
            android:id="@+id/textView3"
            android:gravity="center_horizontal"
            android:layout_above="@+id/start"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startimg"
            android:src="@drawable/ic_library_add_white_24dp"
            android:background="#00ffffff"
            android:layout_alignBottom="@+id/start"
            android:layout_centerHorizontal="true"
            android:labelFor="@id/start" />
    </RelativeLayout>

</RelativeLayout>